Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6025

lctl nodemap commands stop working in interactive mode

XMLWordPrintable

    • 3
    • 16797

      The nodemap commands that use --long options stop working in interactive mode because optind is not being reset between calls to getopt_long(). I'm uploading a patch that correctly resets optind.

            utopiabound Nathaniel Clark
            kit.westneat Kit Westneat (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: