LU-6025 lctl: reset optind before calls to getopt_long()

The nodemap commands in lctl were not properly resetting optind
between calls to getopt_long(). This patch sets optind to 0 before
using getopt_long() to parse the command line.

Signed-off-by: Kit Westneat <kit.westneat@gmail.com>
Change-Id: I14a1f34000c678799298dae3c248c839a1f32d52